[package]
name = "solana-usdc-indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
solana-client = "1.17.28"
solana-sdk = "1.17.28"
solana-transaction-status = "1.17.28"
spl-token = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
base64 = "0.21"
bs58 = "0.4"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "indexer"
path = "src/main.rs"