[package]
name = "solana-usdc-indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
solana-client = "1.16.27"
solana-sdk = "1.16.27"  
solana-transaction-status = "1.16.27"
spl-token = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
base64 = "0.21"
bs58 = "0.4"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "indexer"
path = "src/main.rs"